Updated github pages

--- a/index.html
+++ b/index.html
@@ -609,9 +609,11 @@ I&nbsp;am very fond of <strong>coffee</strong>, <strong>kombucha</strong>, and <
 
 <h3 id="toc_1">Contact</h3>
 
-<p>+48 501 299 282<br>
-jan@strm.dev<br>
-Linked In: <a href="https://www.linkedin.com/in/janmirecki/">@janmirecki</a></p>
+<p>+48 501 299 282<br/>
+jan@strm.dev<br/>
+Linked In: <a href="https://www.linkedin.com/in/janmirecki/">@janmirecki</a><br/>
+The up-to-date version of my resume: <a href="https://weather-the-strm.github.io">weather-the-strm.github.io</a>
+</p>
 
 <h2 id="toc_2">Tech Stack</h2>
 
