Updated fonts and github pages link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body > *:last-child {
   margin-bottom: 0 !important; }
 
 a {
-  color: #4183C4; }
+  color: var(--primary-color); }
 a.absent {
   color: #cc0000; }
 a.anchor {
@@ -503,6 +503,7 @@ pre.line-numbers > code {
 </style>
 
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap');
   :root {
       --gap: 0.5em;
       --primary-color: #39F;
@@ -511,7 +512,7 @@ pre.line-numbers > code {
   }
   
   body {
-      font-family: Futura;
+      font-family: Poppins, sans-serif;
       background: var(--bg-color);
   }
   
@@ -609,10 +610,11 @@ I&nbsp;am very fond of <strong>coffee</strong>, <strong>kombucha</strong>, and <
 
 <h3 id="toc_1">Contact</h3>
 
-<p>+48 501 299 282<br/>
-jan@strm.dev<br/>
+<p>
++48 501 299 282<br/>
+e-mail: <a href="mailto:jan@strm.dev">jan@strm.dev</a><br/>
 Linked In: <a href="https://www.linkedin.com/in/janmirecki/">@janmirecki</a><br/>
-The up-to-date version of my resume: <a href="https://weather-the-strm.github.io">weather-the-strm.github.io</a>
+The up-to-date version of my resume (better for printing): <a href="https://waether-the-strm.github.io/resume/">weather-the-strm.github.io/resume</a>
 </p>
 
 <h2 id="toc_2">Tech Stack</h2>
